--- a/src/com/sky/sns/barongreenback/shared/style.less
+++ b/src/com/sky/sns/barongreenback/shared/style.less
@@ -396,12 +396,11 @@ div.rowsPerPage {
     }
 }
 
-body.jobs, body.failures  {
-    div.entity {
+body.jobs, body.failures, body.jobsHistory  {
+    div.entity, div.shortMessage {
         white-space: pre;
     }
     table.results {
-        table-layout: fixed;
         td {
             overflow: hidden;
         }
